[JENKINS-67974] Java 11 support for MemoryAssert#assertGC (#324)